Fix dark mode

--- a/src/assets/css/header.styl
+++ b/src/assets/css/header.styl
@@ -11,6 +11,9 @@
     font-weight 500
     letter-spacing -0.03em
     color #000
-    
+
+    @media (prefers-color-scheme: dark)
+        background-image url(/images/logo-white.svg)
+
     span
         display none
