--- a/src/assets/css/post.styl
+++ b/src/assets/css/post.styl
@@ -7,7 +7,6 @@
 
 .post-meta
     display inline-block
-    color #000
     padding-top .5em
 
 .post-date,
