--- a/src/assets/css/texts.styl
+++ b/src/assets/css/texts.styl
@@ -69,6 +69,10 @@ a
         text-decoration underline
         text-underline-offset 5px
 
+    @media (prefers-color-scheme: dark)
+        color yellow
+
+
 strong
     font-weight 700
 
